--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.5",
     "mongodb": "^2.2.31",
     "morgan": "~1.9.0",
+    "node-cron": "^1.2.1",
     "pug": "2.0.0-beta11",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
