--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "jsonschema": "^1.2.0",
     "mongodb": "^2.2.31",
     "morgan": "~1.9.0",
     "node-cron": "^1.2.1",
