Modification des logs pour Heroku-logger

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "forever": "^0.15.3",
+    "heroku-logger": "^0.3.0",
     "jsonschema": "^1.2.0",
-    "mongodb": "^2.2.31",
-    "morgan": "~1.9.0",
+    "mongodb": "^2.2.33",
     "node-cron": "^1.2.1",
     "pug": "2.0.0-beta11",
     "raml2html": "^3.0.1",
